# sql_column_presence_validator

./: Makefile  README.md  pyproject.toml
test/: test-validator.py
validator/: __init__.py  main.py
