[project]
name = "sqlcolumnpresence"
version = "0.0.0"
description = "Validate if SQL columns match the schema."
authors = [
    {name = "NumbersStation AI", email = "laurel.orr@numbersstation.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "sqlglot",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2"
]