[project]
name = "sql_column_presence"
version = "0.0.0"
description = "Validate if SQL columns match the schema."
authors = [
    {name = "NumbersStation AI", email = "laurel.orr@numbersstation.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "sqlglot",
    "guardrails-ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]